--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -166,11 +166,11 @@
   "book.runology.runologyguide.basics.runicworkbench.name": "Runic Workbench",
   "book.runology.runologyguide.basics.runicworkbench.page1.title": "Runic Workbench",
   "book.runology.runologyguide.basics.runicworkbench.page1.title2": "Copper Gauntlet",
-  "book.runology.runologyguide.basics.runicworkbench.page2.text": "Some things need runic energy for me to create, The runic workbench will allow me to add runic energy to recipes that it will get by consuming runes, It can hold 1000 of each type of runic energy, however I feel like this form of magic doesn't come without a potentially destructive problem...",
+  "book.runology.runologyguide.basics.runicworkbench.page2.text": "Some things need runic energy for me to create, The runic workbench will allow me to add runic energy to recipes that it will get by consuming runes. The runic workbench can hold 1000 of each type of runic energy, however I feel like this form of magic doesn't come without a potentially destructive problem...",
   "book.runology.runologyguide.basics.runicanalyzer.name": "Runic Analyzer",
   "book.runology.runologyguide.basics.runicanalyzer.page1.title": "Runic Analyzer",
   "book.runology.runologyguide.basics.runicanalyzer.page1.text": "While these first few things have been easy to figure out, for some other stuff, I will need to use the Runic Analyzer to figure out how to make",
-  "book.runology.runologyguide.basics.runicanalyzer.page2.text": "To use this, I must put my research into it then complete all the tasks it gives me, once I finish all the tasks I must read the research to fully understand it",
+  "book.runology.runologyguide.basics.runicanalyzer.page2.text": "To use this, I must put my research into it then complete all the tasks it gives me. once I finish all the tasks I must read the research to fully understand it",
   "book.runology.runologyguide.basics.baserunes.name": "Base Runes",
   "book.runology.runologyguide.basics.baserunes.page1.title": "Blank Rune",
   "book.runology.runologyguide.basics.baserunes.page1.title2": "Fire Rune",
@@ -186,7 +186,7 @@
   "book.runology.runologyguide.artifice.enhancedbonemeal.page1.text": "By mixing bone meal with earth powder and infusing it with plant runic energy, I can make better bone meal",
   "book.runology.runologyguide.basics.runetransformations.name": "Rune Transformations",
   "book.runology.runologyguide.basics.runetransformations.page1.title": "Rune Transformations",
-  "book.runology.runologyguide.basics.runetransformations.page1.text": "It seems that given the right circumstances, a rune may transform into a secondary type, I have written all 4 rune transformations and how to cause the transformation I know of at the moment on the following pages",
+  "book.runology.runologyguide.basics.runetransformations.page1.text": "It seems that given the right circumstances, a rune may transform into a secondary type. I have written all 4 rune transformations and how to cause the transformation I know of at the moment on the following pages",
   "book.runology.runologyguide.basics.runetransformations.page2.title": "Void Rune",
   "book.runology.runologyguide.basics.runetransformations.page2.text": "By throwing an Air Rune on the ground in the end, I can transform it into a Void Rune",
   "book.runology.runologyguide.basics.runetransformations.page3.title": "Energy Rune",
@@ -202,7 +202,7 @@
   "book.runology.runologyguide.purity.purityarrow.name": "Purity Arrow",
   "book.runology.runologyguide.purity.purityarrow.page1.title": "Purity Arrow",
   "book.runology.runologyguide.purity.purityarrow.page1.text": "Using 1 Purity Powder, I can purify 8 arrows making them able to fight the impure by being shot",
-  "book.runology.runologyguide.purity.purityarrow.page2.text": "If a hole in reality were to ever appear, this will work fine for patching it, It also deals more damage towards impure mobs such as the undead, I have a feeling there may be more impurity in another realm close to mine though...",
+  "book.runology.runologyguide.purity.purityarrow.page2.text": "If a hole in reality were to ever appear, this will work fine for patching it. Purity Arrows also deal more damage towards impure mobs such as the undead, I have a feeling there may be more impurity in another realm close to mine though...",
   "book.runology.runologyguide.runicmysteries.shatters.name": "Shatters",
   "book.runology.runologyguide.runicmysteries.shatters.page1.title": "Shatters",
   "book.runology.runologyguide.runicmysteries.shatters.page1.text": "It seems a shatter has appeared, they appear to be a hole in the fabric of reality, creating a bridge to another realm, however it will need to be stabilized for me to go through",
@@ -210,7 +210,7 @@
   "book.runology.runologyguide.runicmysteries.mysteriumgauntlet.name": "Mysterium Gauntlet",
   "book.runology.runologyguide.runicmysteries.mysteriumgauntlet.page1.title": "Mysterium Gauntlet",
   "book.runology.runologyguide.runicmysteries.mysteriumgauntlet.page1.title2": "Empowered Mysterium Gauntlet",
-  "book.runology.runologyguide.runicmysteries.mysteriumgauntlet.page2.text": "If I am correct, by creating a gauntlet out of mysterium and empowering it with 8 mysterium cores, I can stabilize a shatter by giving it the power of all 8 mysterium cores, Entering a stabilized shatter is likely a one way trip, I feel an incredible power from the other side, I may need to defeat that incredible power to return to my realm",
+  "book.runology.runologyguide.runicmysteries.mysteriumgauntlet.page2.text": "If I am correct, by creating a gauntlet out of mysterium and empowering it with 8 mysterium cores, I can stabilize a shatter by giving it the power of all 8 mysterium cores. Entering a stabilized shatter is likely a one way trip, I feel an incredible power from the other side, I may need to defeat that incredible power to return to my realm",
   "book.runology.runologyguide.purity.purifiedflesh.name": "Purified Flesh",
   "book.runology.runologyguide.purity.purifiedflesh.page1.title": "Purified Flesh",
   "book.runology.runologyguide.purity.purifiedflesh.page1.text": "By infusing rotten flesh with purity, I can purify it allowing me to eat it without any side effects",
@@ -237,7 +237,7 @@
   "book.runology.runologyguide.runicmysteries.realityslicer.page1.text": "This blade, it can slice open holes in reality, These shatters are weak but stable meaning I can go through them, but they will close on their own after a short time",
   "book.runology.runologyguide.runicmysteries.instabilityresonator.name": "Instability Resonator",
   "book.runology.runologyguide.runicmysteries.instabilityresonator.page1.title": "Instability Resonator",
-  "book.runology.runologyguide.runicmysteries.instabilityresonator.page1.text": "I have come up with a device that can detect the resonance of instability allowing me to know roughly how much instability is in the area im in, in each segment, there is about 125 instability",
+  "book.runology.runologyguide.runicmysteries.instabilityresonator.page1.text": "I have come up with a device that can detect the resonance of instability allowing me to know roughly how much instability is in the area im in. In each segment, there is about 125 instability",
   "book.runology.runologyguide.runicmysteries.instability.name": "Instability",
   "book.runology.runologyguide.runicmysteries.instability.page1.title": "Instability",
   "book.runology.runologyguide.runicmysteries.instability.page1.text": "It seems that there is a mysterious force i have named \"Instability\", The more instability there is, The worse and faster instability events happen",
@@ -251,7 +251,7 @@
   "book.runology.runologyguide.ancientdiscovery.ancientdragonsblade.name": "Ancient Dragon's Blade",
   "book.runology.runologyguide.ancientdiscovery.ancientdragonsblade.page1.title": "Ancient Dragon's Blade",
   "book.runology.runologyguide.ancientdiscovery.ancientdragonsblade.page1.title2": "Dragonium Ingot",
-  "book.runology.runologyguide.ancientdiscovery.ancientdragonsblade.page2.text": "I can't copy the original design, it was originally made out of the scales of a long dead species of dragon, however I can make a metal using dragons breath and copper which will work, By using this weapon I can create dragon breath to kill my enemies, however it will need to recharge after I finish using it",
+  "book.runology.runologyguide.ancientdiscovery.ancientdragonsblade.page2.text": "I can't copy the original design, it was originally made out of the scales of a long dead species of dragon, however I can make a metal using dragons breath and copper which will work, By using this weapon I can create dragon breath to kill my enemies, it will need to recharge after I finish using it",
   "book.runology.runologyguide.spellcasting.amethyststaff.name": "Amethyst Staff",
   "book.runology.runologyguide.spellcasting.amethyststaff.page1.title": "Amethyst Staff",
   "book.runology.runologyguide.spellcasting.amethyststaff.page1.text": "Unlike gauntlets, staffs can cast ranged spells but are unable to cast melee spells, Amethyst will work for a staff core but this is only a Tier 1 Staff",
@@ -260,10 +260,10 @@
   "book.runology.runologyguide.spellcasting.coppergauntlet.page1.text": "Unlike staffs, gauntlets can cast melee spells but are unable to cast ranged spells, Copper will work for a gauntlet material but this is only a Tier 1 Gauntlet",
   "book.runology.runologyguide.spellcasting.fireballspellcrystal.name": "Fireball Spell Crystal",
   "book.runology.runologyguide.spellcasting.fireballspellcrystal.page1.title": "Fireball Spell Crystal",
-  "book.runology.runologyguide.spellcasting.fireballspellcrystal.page1.text": "With blaze powder and magma blocks I can create a spell crystal to be cast using a wand which will fire a simple fireball, this is a Tier 1 Spell",
+  "book.runology.runologyguide.spellcasting.fireballspellcrystal.page1.text": "With blaze powder and magma blocks I can create a spell crystal to be cast using a wand which will fire a simple fireball. this is a Tier 1 Spell",
   "book.runology.runologyguide.spellcasting.iceshardspellcrystal.name": "Ice Shards Spell Crystal",
   "book.runology.runologyguide.spellcasting.iceshardspellcrystal.page1.title": "Ice Shards Spell Crystal",
-  "book.runology.runologyguide.spellcasting.iceshardspellcrystal.page1.text": "Using Ice and Packed Ice, this spell will shoot out 15 ice shards which deal low damage, this is a Tier 1 Spell",
+  "book.runology.runologyguide.spellcasting.iceshardspellcrystal.page1.text": "Using Ice and Packed Ice, this spell will shoot out 15 ice shards which deal low damage. this is a Tier 1 Spell",
   "book.runology.runologyguide.spellcasting.mysteriumgauntlet.name": "Mysterium Gauntlet",
   "book.runology.runologyguide.spellcasting.mysteriumgauntlet.page1.title": "Mysterium Gauntlet",
   "book.runology.runologyguide.spellcasting.mysteriumgauntlet.page1.text": "Using Mysterium instead of Copper, and even the same structure, I can create a Tier 2 Gauntlet, however this has another interesting use",
@@ -276,7 +276,7 @@
   "book.runology.runologyguide.spellcasting.spelltable.page2.text": "To use a spell I must have the required runic energy in my staff or gauntlet and the correct spell crystal in my offhand",
   "book.runology.runologyguide.spellcasting.summontotemspellcrystal.name": "Summon Totem Spell Crystal",
   "book.runology.runologyguide.spellcasting.summontotemspellcrystal.page1.title": "Summon Totem Spell Crystal",
-  "book.runology.runologyguide.spellcasting.summontotemspellcrystal.page1.text": "Using Mysterium Ingots and Raw Mysterium, I can create a spell that will create a totem which will grant resistance to all players nearby, this is a Tier 2 Spell",
+  "book.runology.runologyguide.spellcasting.summontotemspellcrystal.page1.text": "Using Mysterium Ingots and Raw Mysterium, I can create a spell that will create a totem which will grant resistance to all players nearby. this is a Tier 2 Spell",
   "book.runology.runologyguide.artifice.runiccauldron.name": "Runic Cauldron",
   "book.runology.runologyguide.artifice.runiccauldron.page1.title": "Runic Cauldron",
   "book.runology.runologyguide.artifice.runiccauldron.page1.text": "I can make a cauldron capable of melting items down and merging them with a fluid to create new things, I can empty it by using it while sneaking with an empty hand",
@@ -314,10 +314,10 @@
   "book.runology.runologyguide.artifice.basictransmutation.page1.title2": "Redstone Dust",
   "book.runology.runologyguide.artifice.basictransmutation.page2.title": "Gold Ingot",
   "book.runology.runologyguide.artifice.basictransmutation.page2.title2": "Iron Ingot",
-  "book.runology.runologyguide.artifice.basictransmutation.page3.text": "The similarities between some materials allow me to transmutate one material into another, I have managed to figure out how to properly use a few basic connections",
+  "book.runology.runologyguide.artifice.basictransmutation.page3.text": "The similarities between some materials allow me to transmutate one material into another. I have managed to figure out how to properly use a few basic connections",
   "book.runology.runologyguide.spellcasting.conjuresparkspellcrystal.name": "Conjure Spark Spell Crystal",
   "book.runology.runologyguide.spellcasting.conjuresparkspellcrystal.page1.title": "Conjure Spark Spell Crystal",
-  "book.runology.runologyguide.spellcasting.conjuresparkspellcrystal.page1.text": "Using glowstone and lightning rods, I can conjure a ball of energy that zaps anything non-human that get close to it, this spark will also give off light",
+  "book.runology.runologyguide.spellcasting.conjuresparkspellcrystal.page1.text": "Using glowstone and lightning rods, I can conjure a ball of energy that zaps anything non-human that get close to it. This spark will also give off light",
 
   "book.runology.condition.analyze.ln1": "Click with paper in your inventory to get research",
   "book.runology.condition.analyze.ln2": "Requires Advancement : %1$s"
