--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -144,6 +144,8 @@
   "item.runology.airupgrade": "Air Upgrade",
   "item.runology.waterupgrade": "Water Upgrade",
   "item.runology.transformationupgrade": "Transformation Upgrade",
+  "item.runology.dragoniumelytra": "Dragonium Elytra",
+  "item.runology.prismaticelytra": "Prismatic Elytra",
 
   "runology.analyzetasks.runology.consumeitem": "Give Items",
   "runology.analyzetasks.runology.getitem": "Collect Items",
@@ -344,29 +346,34 @@
   "book.runology.runologyguide.spellcasting.conjuresparkspellcrystal.page1.text": "Using glowstone and lightning rods, I can conjure a ball of energy that zaps anything non-human that gets close to it. This spark will also give off light.",
   "book.runology.runologyguide.runicmysteries.realitybreaker.name": "Reality Breaker",
   "book.runology.runologyguide.runicmysteries.realitybreaker.page1.title": "Reality Breaker",
-  "book.runology.runologyguide.runicmysteries.realitybreaker.page1.text": "This pickaxe, it holds the power to warp reality. With this pickaxe, I am capable of harvesting that Prismatic Meteor.",
+  "book.runology.runologyguide.runicmysteries.realitybreaker.page1.text": "This pickaxe holds the power to warp reality. With it, I am capable of harvesting that Prismatic Meteor.",
   "book.runology.runologyguide.purity.prismaticmeteor.name": "Prismatic Meteor",
   "book.runology.runologyguide.purity.prismaticmeteor.page1.title": "Prismatic Meteor",
-  "book.runology.runologyguide.purity.prismaticmeteor.page1.text": "This meteor feels incredibly pure, I have the feeling I may have a use for it later...",
+  "book.runology.runologyguide.purity.prismaticmeteor.page1.text": "This meteor feels incredibly pure. I have the feeling I may find a use for it later...",
   "book.runology.runologyguide.purity.prismaticingot.name": "Prismatic Ingot",
   "book.runology.runologyguide.purity.prismaticingot.page1.title": "Prismatic Ingot",
-  "book.runology.runologyguide.purity.prismaticingot.page1.text": "It seems that when Prismatic Shards are refined, it becomes truly prismatic, showing all the colors of the rainbow.",
+  "book.runology.runologyguide.purity.prismaticingot.page1.text": "It seems that when Prismatic Shards are refined, they become truly prismatic, showing all the colors of the rainbow.",
   "book.runology.runologyguide.purity.prismaticblaster.name": "Prismatic Blaster",
   "book.runology.runologyguide.purity.prismaticblaster.page1.title": "Prismatic Blaster",
   "book.runology.runologyguide.purity.prismaticblaster.page2.text": "Now that I have Prismatic Ingots, I am able to craft a powerful ranged weapon. To charge it, I must sneak and use it, it will take time to charge. The more charge it has, the more projectiles are shot.",
   "book.runology.runologyguide.spellcasting.transformationupgrade.name": "Transformation Upgrade",
   "book.runology.runologyguide.spellcasting.transformationupgrade.page1.title": "Transformation Upgrade",
-  "book.runology.runologyguide.spellcasting.transformationupgrade.page1.text": "I am unable to make upgrades for subtypes however I am able to make an upgrade that will transform the costs of spells into their core runic energy type.",
+  "book.runology.runologyguide.spellcasting.transformationupgrade.page1.text": "No matter how hard I try, I am unable to make upgrades for subtypes. However, I am able to make an upgrade that will transform the costs of spells into their core runic energy type.",
   "book.runology.runologyguide.spellcasting.spellcastingupgrades.name": "Spellcasting Upgrades",
   "book.runology.runologyguide.spellcasting.spellcastingupgrades.page1.title": "Spellcasting Upgrades",
-  "book.runology.runologyguide.spellcasting.spellcastingupgrades.page1.text": "With spellcasting upgrades, I am capable of improving my staffs and gauntlets! I am unable to remove a spellcasting upgrade so I will need to decide carefully...",
+  "book.runology.runologyguide.spellcasting.spellcastingupgrades.page1.text": "With spellcasting upgrades, I am capable of improving my staffs and gauntlets! Once I add an upgrade, I can't remove it again, so I will need to decide carefully...",
   "book.runology.runologyguide.spellcasting.elementalupgrades.name": "Elemental Upgrades",
   "book.runology.runologyguide.spellcasting.elementalupgrades.page1.title": "Earth Upgrade",
   "book.runology.runologyguide.spellcasting.elementalupgrades.page1.title2": "Air Upgrade",
   "book.runology.runologyguide.spellcasting.elementalupgrades.page2.title": "Water Upgrade",
   "book.runology.runologyguide.spellcasting.elementalupgrades.page2.title2": "Fire Upgrade",
-  "book.runology.runologyguide.spellcasting.elementalupgrades.page3.text": "With this, I can create a spellcasting upgrade capable of generating runic energy, it will take time but it is free runic energy.",
-
+  "book.runology.runologyguide.spellcasting.elementalupgrades.page3.text": "With this, I can create a spellcasting upgrade capable of generating runic energy. It's slow, but free energy is nothing to discount.",
+  "book.runology.runologyguide.ancientdiscovery.dragoniumelytra.name": "Dragonium Elytra",
+  "book.runology.runologyguide.ancientdiscovery.dragoniumelytra.page1.title": "Dragonium Elytra",
+  "book.runology.runologyguide.ancientdiscovery.dragoniumelytra.page1.text": "By upgrading an elytra with dragonium, I can make it stronger. It has more durability and will act as armor",
+  "book.runology.runologyguide.purity.prismaticelytra.name": "Prismatic Elytra",
+  "book.runology.runologyguide.purity.prismaticelytra.page1.title": "Prismatic Elytra",
+  "book.runology.runologyguide.purity.prismaticelytra.page1.text": "It seems dragonium was not the best I could get: I can enhance a dragonium elytra with prismatic ingots to make it even better!",
 
   "book.runology.condition.analyze.ln1": "Click with paper in your inventory to get research",
   "book.runology.condition.analyze.ln2": "Requires Advancement : %1$s"
