--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -370,7 +370,7 @@
   "book.runology.runologyguide.spellcasting.elementalupgrades.page3.text": "With this, I can create a spellcasting upgrade capable of generating runic energy. It's slow, but free energy is nothing to discount.",
   "book.runology.runologyguide.ancientdiscovery.dragoniumelytra.name": "Dragonium Elytra",
   "book.runology.runologyguide.ancientdiscovery.dragoniumelytra.page1.title": "Dragonium Elytra",
-  "book.runology.runologyguide.ancientdiscovery.dragoniumelytra.page1.text": "By upgrading an elytra with dragonium, I can make it stronger. It has more durability and will act as armor",
+  "book.runology.runologyguide.ancientdiscovery.dragoniumelytra.page1.text": "By upgrading an elytra with dragonium, I can make it stronger. It has more durability and will act as armor/",
   "book.runology.runologyguide.purity.prismaticelytra.name": "Prismatic Elytra",
   "book.runology.runologyguide.purity.prismaticelytra.page1.title": "Prismatic Elytra",
   "book.runology.runologyguide.purity.prismaticelytra.page1.text": "It seems dragonium was not the best I could get: I can enhance a dragonium elytra with prismatic ingots to make it even better!",
