you know what? *turns you into a block entity*

--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+  "block.runology.shatter": "Shatter",
+
   "book.runology.guidebook.name": "Runic Codex",
 
   "modonomicon.runology.guidebook.discover": "You feel a mysterious force coming out of that object, maybe you should infuse a book with that force?",
