--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -3,10 +3,13 @@
 
   "book.runology.guidebook.name": "Runic Codex",
 
-  "modonomicon.runology.guidebook.discover": "You feel a mysterious force coming out of that object, maybe you should infuse a book with that force?",
+  "modonomicon.runology.guidebook.discover": "I feel a strange and mysterious force... For whatever reason, I feel as if I should imbue some form of information storage with that power, A book will work.",
 
   "modonomicon.runology.guidebook.basics.name": "Basics",
 
+  "modonomicon.runology.guidebook.basics.guidebook.name": "Knowledge",
+  "modonomicon.runology.guidebook.guidebook.page0.title": "Knowledge",
+  "modonomicon.runology.guidebook.guidebook.page0.text": "After imbuing that strange power into a book, I have obtained powerful knowledge, this path, it may lead me to power! However... I can't help but wonder... What is that voice in my head telling me all of this?",
   "modonomicon.runology.guidebook.basics.shatters.name": "Shatters",
   "modonomicon.runology.guidebook.shatters.page0.title": "Shatters",
   "modonomicon.runology.guidebook.shatters.page0.text": "These holes in space appear to lead to somewhere else, while I may not be able to cross them, I may be able to extract energy from them.",
