--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "block.runology.shatter": "Shatter",
 
+  "creativemodetab.runology": "Runology",
+
   "book.runology.guidebook.name": "Runic Codex",
 
   "modonomicon.runology.guidebook.discover": "I feel a strange and mysterious force... For whatever reason, I feel as if I should imbue some form of information storage with that power, A book will work.",
