--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.runology.shatter": "Shatter",
+  "block.runology.shatterstone": "Shatterstone",
 
   "creativemodetab.runology": "Runology",
 
