--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -6,7 +6,7 @@
 
   "book.runology.guidebook.name": "Runic Codex",
 
-  "modonomicon.runology.guidebook.discover": "I feel a strange and mysterious force... For whatever reason, I feel as if I should imbue some form of information storage with that power, A book will work.",
+  "modonomicon.runology.guidebook.discover": "I feel a strange and mysterious force... For whatever reason, I feel as if I should imbue a book with this power.",
 
   "modonomicon.runology.guidebook.basics.name": "Basics",
 
