--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "block.runology.shatter": "Shatter",
   "block.runology.shatterstone": "Shatterstone",
+  "item.runology.gold_chisel": "Gold Chisel",
+  "item.runology.runic_chisel": "Runic Chisel",
 
   "creativemodetab.runology": "Runology",
 
@@ -11,19 +13,28 @@
   "modonomicon.runology.guidebook.basics.name": "Basics",
 
   "modonomicon.runology.guidebook.basics.guidebook.name": "Knowledge",
-  "modonomicon.runology.guidebook.guidebook.page0.title": "Knowledge",
-  "modonomicon.runology.guidebook.guidebook.page0.text": "After imbuing that strange power into a book, I have obtained powerful knowledge, this path, it may lead me to power! However... I can't help but wonder... What is that voice in my head telling me all of this?",
+  "modonomicon.runology.guidebook.basics.guidebook.page0.title": "Knowledge",
+  "modonomicon.runology.guidebook.basics.guidebook.page0.text": "After imbuing that strange power into a book, I have obtained powerful knowledge, this path, it may lead me to power! However... I can't help but wonder... What is that voice in my head telling me all of this?",
   "modonomicon.runology.guidebook.basics.shatters.name": "Shatters",
-  "modonomicon.runology.guidebook.shatters.page0.title": "Shatters",
-  "modonomicon.runology.guidebook.shatters.page0.text": "These holes in space appear to lead to somewhere else, while I may not be able to cross them, I may be able to extract energy from them.",
+  "modonomicon.runology.guidebook.basics.shatters.page0.title": "Shatters",
+  "modonomicon.runology.guidebook.basics.shatters.page0.text": "These holes in space appear to lead to somewhere else, while I may not be able to cross them, I may be able to extract energy from them. I will call this energy \"Shattered Flow\"",
   "modonomicon.runology.guidebook.basics.basic_runes.name": "Basic Runes",
-  "modonomicon.runology.guidebook.basic_runes.page0.title": "Basic Runes",
-  "modonomicon.runology.guidebook.basic_runes.page0.text": "There is 4 runes I can utilize to manipulate the world: [#](ff5d00)Heat[#](), [#](00d1ff)Frost[#](), [#](00ff00)Shape[#]() and [#](ffd100)Motion[#](). Utilizing these 4 is powerful but there has to be more...",
+  "modonomicon.runology.guidebook.basics.basic_runes.page0.title": "Basic Runes",
+  "modonomicon.runology.guidebook.basics.basic_runes.page0.text": "There is 4 runes I can utilize to manipulate the world: [#](ff5d00)Heat[#](), [#](00d1ff)Frost[#](), [#](00ff00)Shape[#]() and [#](ffd100)Motion[#](). Utilizing these 4 is powerful but there has to be more...",
+  "modonomicon.runology.guidebook.basics.shatterstone.name": "Shatterstone",
+  "modonomicon.runology.guidebook.basics.shatterstone.page0.title": "Shatterstone",
+  "modonomicon.runology.guidebook.basics.shatterstone.page0.text": "This stone... I have never seen it before however after discovering a shatter, I have started seeing it everywhere in caves... Is there more to this world than what I can see?",
+  "modonomicon.runology.guidebook.basics.runic_chisel.name": "Runic Chisel",
+  "modonomicon.runology.guidebook.basics.runic_chisel.page0.title": "Runic Chisel",
+  "modonomicon.runology.guidebook.basics.runic_chisel.page0.text": "While I know about runes, I do not have a method to create them, a Runic Chisel will work, to obtain one, I will have to imbue a gold chisel with Shattered Flow.",
 
-  "emi.info.runology.guidebook": "Obtain a Runic Codex by dropping a book nearby a Shatter",
+  "emi.info.runology.guidebook": "Obtain a Runic Codex by dropping a Book nearby a Shatter",
+  "emi.info.runology.runic_chisel": "Obtain a Runic Chisel by dropping a Gold Chisel nearby a Shatter",
 
   "advancements.runology.runology.title": "Runology",
   "advancements.runology.runology.description": "Runes powered by another world...",
   "advancements.runology.shatter.title": "Shatters",
-  "advancements.runology.shatter.description": "Discover a shatter in the world"
+  "advancements.runology.shatter.description": "Discover a shatter in the world",
+  "advancements.runology.shatterstone.title": "Shatterstone",
+  "advancements.runology.shatterstone.description": "Obtain Shatterstone"
 }
