changed is to are

--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -20,7 +20,7 @@
   "modonomicon.runology.guidebook.basics.shatters.page0.text": "These holes in space appear to lead to somewhere else, while I may not be able to cross them, I may be able to extract energy from them. I will call this energy \"Shattered Flow\"",
   "modonomicon.runology.guidebook.basics.basic_runes.name": "Basic Runes",
   "modonomicon.runology.guidebook.basics.basic_runes.page0.title": "Basic Runes",
-  "modonomicon.runology.guidebook.basics.basic_runes.page0.text": "There is 4 runes I can utilize to manipulate the world: [#](ff5d00)Heat[#](), [#](00d1ff)Frost[#](), [#](00ff00)Shape[#]() and [#](ffd100)Motion[#](). Utilizing these 4 is powerful but there has to be more...",
+  "modonomicon.runology.guidebook.basics.basic_runes.page0.text": "There are 4 runes I can utilize to manipulate the world: [#](ff5d00)Heat[#](), [#](00d1ff)Frost[#](), [#](00ff00)Shape[#]() and [#](ffd100)Motion[#](). Utilizing these 4 is powerful but there has to be more...",
   "modonomicon.runology.guidebook.basics.shatterstone.name": "Shatterstone",
   "modonomicon.runology.guidebook.basics.shatterstone.page0.title": "Shatterstone",
   "modonomicon.runology.guidebook.basics.shatterstone.page0.text": "This stone... I have never seen it before however after discovering a shatter, I have started seeing it everywhere in caves... Is there more to this world than what I can see?",
