--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "block.runology.shatter": "Shatter",
   "block.runology.shatterstone": "Shatterstone",
+  "block.runology.shattered_focus": "Shattered Focus",
+
   "item.runology.gold_chisel": "Gold Chisel",
   "item.runology.runic_chisel": "Runic Chisel",
 
