--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -2,6 +2,7 @@
   "block.runology.shatter": "Shatter",
   "block.runology.shatterstone": "Shatterstone",
   "block.runology.shattered_focus": "Shattered Focus",
+  "block.runology.shattered_relay": "Shattered Relay",
 
   "item.runology.gold_chisel": "Gold Chisel",
   "item.runology.runic_chisel": "Runic Chisel",
