--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -3,6 +3,7 @@
   "block.runology.shatterstone": "Shatterstone",
   "block.runology.shattered_focus": "Shattered Focus",
   "block.runology.shattered_relay": "Shattered Relay",
+  "block.runology.gold_pillar": "Gold Pillar",
 
   "item.runology.gold_chisel": "Gold Chisel",
   "item.runology.runic_chisel": "Runic Chisel",
